syntax = "proto3";

option java_multiple_files = true;
option csharp_namespace = "GrpcClient";

service UserService{
  //rpc CreatePetOwner(PetOwner) returns (PetOwner); //This method is no neded anymore
  rpc CreateUser(UserProto) returns (UserProto);
//  rpc LoginUserProto() returns (UserProto);
  rpc FindUser(SearchFieldProto) returns (UserProto);  // return with password, so be careful
  //rpc UpdatePetOwnerInformation(PetOwnerInfo) returns (Void); // not sure about void
}

service AnnouncementService{
  rpc CreateAnnouncement(AnnouncementProto) returns (AnnouncementProto); // maybe createAnnouncement message would be better
  rpc FindAnnouncements(SearchFieldProto) returns (AnnouncementsProto);
  //rpc UpdateAnnouncement(Announcement) returns (Void);  // not sure about void
  //rpc DeleteAnnouncement(Announcement) returns (Void);  // not sure about void
}

message UserProto{
  string email = 1;
  string username = 2;
  string password = 3;
  int32 age = 4;
  string phone = 5;
  string type = 6;
}


message LoginUserProto{
  string email = 1;
  string password = 2;
}

message AnnouncementProto{
  string petOwnerEmail = 1;
  string description = 2;
  TimeIntervalProto timeInterval = 3;
  PetProto pet = 4;
  string postalCode = 5;
  string dateOfCreation = 6;
  int32 id = 7;
}

message AnnouncementsProto{
  repeated AnnouncementProto announcements = 1;
}

message PetProto{
  string petName = 1;
  string petType = 2;  // dog, cat ....
  int32 weight = 3;
  bool isVaccinated = 4;
  string description =5;
  int32 id = 6;
}

message TimeIntervalProto{
  string startDate = 1;
  string finishDate = 2;
}

message SearchFieldProto{
  string query = 1;
}

message Void{}